tests/neg-custom-args/captures/match-return-avoid.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/match-return-avoid.scala:8:11 ----------------------------
8 |    case y => Box(y) // error
  |           ^^^^^^^^^
  |           Found:    Box[Foo]^'s1
  |           Required: Box[Foo^{y}]^'s2
  |
  |           Note that capability `y` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
